--- a/hire/index.html
+++ b/hire/index.html
@@ -35,7 +35,7 @@
 
 
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="http://uxtasks.org/images/pic07.jpg" alt="" /></a>
 								<h3>Why you should hire us?</h3>
 								<p>We offer you services to grow up your project. We help you to be the superman of your field. What we do is trying to help world be a better place and you need us to make differences.</p>
 								<p>We try our best to make it work and we trust us.</p>
