--- a/rights/index.html
+++ b/rights/index.html
@@ -49,7 +49,7 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="http://uxtasks.org/images/pic06.jpg" alt="" /></a>
 											<h3>Works</h3>
 											<p>We design mechanisms or correct them. The whole thing is about create a feeling that makes you different from others.</p>
 											<footer>
@@ -65,7 +65,7 @@
 
 
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="http://uxtasks.org/images/pic05.jpg" alt="" /></a>
 										<h3>Job opportunities</h3>
 										<p>To complete our crue we need you!</p>
 
