--- a/works/index.html
+++ b/works/index.html
@@ -37,7 +37,7 @@
 
 
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="http://uxtasks.org/images/pic06.jpg" alt="" /></a>
 										<h3>UXTasks designs mechanisms or creates visuals</h3>
 										<p>What we do is simple but not easy! we create mechanisms or we try to correct them. This helps your work (project) to work more efficient and makes you stronger. The base of UX is user as it's "Users" experience, so, in any field of our work, user is way more important of everything. User wants you to respect him/her so he/she trusts you. What we do is make him/her comfortable in a way that he/she can't leave you.</p>
 										<p>We design apps, websites, parks, clubs, bars, shops, cafes and everything contains UX. We have fresh powerful team includes experts on coding, designing, consulting and marketing</p>
@@ -69,7 +69,7 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="http://uxtasks.org/images/pic07.jpg" alt="" /></a>
 											<h3>Hire us!</h3>
 											<p>We offer you services to grow up your project. We help you to be the superman of your field. What we do is trying to help world be a better place and you need us to make differences.</p>
 											<footer>
