--- a/rights/index.html
+++ b/rights/index.html
@@ -77,6 +77,7 @@
 											<li>UX analyst</li>
 											<li>Marketer</li>
 										</ul>
+										<p>Contact uxtasks@usa.com</p>
 									</section>
 
 							</div>
