--- a/rights/index.html
+++ b/rights/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>UXTasks.org rights</title>
+		<title>UXTasks.org rights and jobs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="http://uxtasks.org/assets/js/ie/html5shiv.js"></script><![endif]-->
