--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<ul>
 
 
-							<li><a href="http://uxtasks.org/rights">Rights</a></li>
+							<li><a href="http://uxtasks.org/rights">Rights and Jobs</a></li>
 							<li><a href="http://uxtasks.org/hire" class="button special">Hire us</a></li>
 						</ul>
 					</nav>
