--- a/works/index.html
+++ b/works/index.html
@@ -19,7 +19,7 @@
 						<ul>
 							<li><a href="http://uxtasks.org">Home</a></li>
 
-							<li><a href="http://uxtasks.org/rights">Rights</a></li>
+							<li><a href="http://uxtasks.org/rights">Rights and Jobs</a></li>
 							<li><a href="http://uxtasks.org/hire" class="button special">Hire us!</a></li>
 						</ul>
 					</nav>
@@ -93,7 +93,7 @@
 						<li><a href="mailto:uxtasks@usa.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; UXTasks.org. All rights reserved.</li><li><a href="http://uxtasks.org/rights">Rights</a></li>
+						<li>&copy; UXTasks.org. All rights reserved.</li><li><a href="http://uxtasks.org/rights">Rights and Jobs</a></li>
 					</ul>
 				</footer>
 
